# RescueNow

./: .gitignore  E1.html  analysis_cache.json  app.js  architecture.md  index.html  medical-profile.json  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  routines.json  server.js  vite.config.js
scripts/: analysis_cache.py  lab_ingestion.py  plot_test_results.py  routine_generator.py  supplement_recommender.py
src/: App.jsx  exerciseCatalog.json  medicalApi.js
user_files/: probe-1775978834906.txt
