[project]
name = "rescuenow-health-ingestion"
version = "0.1.0"
description = "PDF lab ingestion, supplement recommendations, and plotting utilities"
requires-python = ">=3.11"
dependencies = [
  "llama-parse>=0.6.0",
  "pydantic>=2.8.0",
  "matplotlib>=3.8.0",
  "pypdf>=4.2.0",
]

[tool.uv]
package = false
